fix(Details Panel): :bug: move details panel to the left when results panel is collapsed

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,4 +1,12 @@
-@mixin transition($transition1, $transition2) {
+@mixin transition($transition) {
+  -moz-transition: $transition;
+  -o-transition: $transition;
+  -ms-transition: $transition;
+  -webkit-transition: $transition;
+  transition: $transition;
+}
+
+@mixin transition2($transition1, $transition2) {
   -moz-transition: $transition1, $transition2;
   -o-transition: $transition1, $transition2;
   -ms-transition: $transition1, $transition2;
