--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -12,6 +12,9 @@ $box-shadow: 0px 3px 4px 0px rgba(102, 102, 102, 0.25);
 $panel-z-index: 999;
 $panel-width: 26.5rem;
 $md-results-panel-width: 25rem;
+$collapsed-panel-width: 18rem;
+$collapsed-panel-height: 5rem;
+$md-collapsed-panel-height: 3.5rem;
 
 // DEFAULT EPC COLORS
 $color-epc-a: #3d4e3b;
